--- a/app/public/styles/sidebar.css
+++ b/app/public/styles/sidebar.css
@@ -30,7 +30,8 @@ a {
     background-color: var(--first-color);
     padding: .5rem 1rem 0 0;
     transition: .5s;
-    z-index: var(--z-fixed)
+    z-index: var(--z-fixed);
+    position: sticky;
 }
 
 .sidenav {
